argocd/atuin/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: atuin-app
  name: atuin-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - atuin.yanello.net
  rules:
    - backendRefs:
        - name: atuin
          port: 8888
